[package]
name = "quadneo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.10"
getrandom = { version = "0.2.3", features = ["js"] }
rand = "0.8.4"
strum = "0.22.0"
strum_macros = "0.22.0"
regex = "1.5.4"